syntax = "proto3";
package chitchat;

option go_package = "itu_chitchat/grpc;chitchatpb";

service Chat {
  rpc ChatStream(stream ChatMessage) returns (stream ChatReply);

  rpc Handshake(HandshakeRequest) returns (HandshakeReply);
}

message HandshakeRequest {
  string client_name = 1;
  int64 lamport      = 2;
  string client_id   = 3;
}

message HandshakeReply {
  bool success       = 1;
  string message     = 2;
  int64 lamport      = 3;
}

message ChatMessage {
  string user      = 1;
  string text      = 2;
  int64 lamport    = 3;
  string client_id = 4;
}

message ChatReply {
  string user      = 1;
  string text      = 2;
  int64 lamport    = 3;
  string client_id = 4;
}

